--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,13 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: 36px;
+}
+
+.plants {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
 
 /* do not edit this footer */
@@ -23,4 +31,8 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.types {
+  max-width: 200px;
 }
